Se acabo la primera parte del frame

--- a/winTwoPlays/frmSendReceive.resx
+++ b/winTwoPlays/frmSendReceive.resx
@@ -220,6 +220,49 @@
         AUUUUAFFFFABRRRQAUUUUAf/2Q==
 </value>
   </data>
+  <data name="lblImagen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAMAAACahl6sAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
+        MAAA6mAAADqYAAAXcJy6UTwAAAFKUExURX+Fu4CGvIKIvYGHvYKIvomPxouRyIuRx4qQx4CGu4+VzJOZ
+        0JGXzpSa0ZCWzZKYz5qg15yi2Zuh2KCm3qOp4aWr46Op4KWr4qSq4qSq4aKo4J2j2qux6a2z662z6rS6
+        8ba8877E+r3D+sbM/cjO/sfN/czS/9HX/87V/8/V/9DW/87U/9zi/Ofr/eXp++bq/OLm9+Ll9+Lm+OTo
+        +dvh+//+/v39/f7+/v79/fj4+O7u7fDw7/z8+/7+/fTz8+7t7eHk983T/+js//////n5+e3t7e7u7u/v
+        7/Pz8+Dk98nP/vf39/T09PX19fPz8uHl983U/+To+8vS//v7+/Hx8ePn+ujr/szT//T08/j49+Lm+eTo
+        +uLl+P39/OXo++Pm+d3i/NHY/8/W/9DX/8jP/r/F+r/F+52j2ZOZ0YmPxYySyYySyH6Eun2DuKbH5ysA
+        AAAHdElNRQfpARgQJjnVrx52AAAHU0lEQVR4Xu1b/VsaRxCGfJBTT05aJH5RJSHJkaunJikoiZGLpoTE
+        RG2StsbWtmnTD9P+/7/2ud1Fbo9ZYPlhzxeZ5/G4We5lnmGXmXnX2VQqfeVq+hr8JZW6ej1zw8pYGat9
+        uRG+RsbCOz7GLhfyucz1dGrCmpyyp7NOdtq2bXsqvMnaWYffONkpJ2vzm/Dti/rcpDWRSlvOTC6X+yL8
+        Yxfx133TefuiPTfjWOlU2prOfZnPz+bzhZtzBX4zO1cozM8W8oXZ+UJhblaMzt0UNxftuYXFKeaIncsv
+        Fb8qCglvmNJ901Yu2HNL87ksc2Qqly8ur8DKcrGQm7bCH7uTyxdXSqhya6WYFzNiM0dulyHlTil0JJwR
+        vrRWSuW791wmFSFc6+hdA229a8Ac4r5XZo7wGclyRypfr/qra2v++gaTBz5TV/2HXN94yNVV/wHX132m
+        JolYf1ThjvCoNc0dcVe/qdY2a1t1Lo+f1Kq17c1a9ekO03eeVmub27Vq7clj8cRWbbOWMKIRcEfs6Iy4
+        z3ZD2Xv+bSjPm1Wm7u6+EAMvhF5tioE9MZAcot66yx1xWGZvzwiiI+7LyNIagRnhS0tErXNHuEQgXCJG
+        uHSMJIU4d4SHX55Hyu7aXiivXnDZ32Lq3t5rMfBa6Fv7YuCVGEgO8ebgkC+tMPy2M3u5clAf4ktJFLF9
+        FHBHpIRYOagPsUwTRWwffRdNiGJpQToi/UZE+IV0xONLS0qIkI6IpSWVKMiO8MzemRF1fNCPKCYQsaXV
+        npEHj5vNZnO/yuXtu1BrNptbYmBL6O/eioF9MZAc4sl78WM/5+wsIX4/zGcli2hn9g5nRy1RRGaPcnbM
+        olFkdikhQjoiJcT40qIg+kZMIOqtHwjODumICL8yZ0d0RCJW8Rmh4oN+RDGBUHD29z8OwW0SRRx/kJbW
+        eYmyM8SXkijivIyXODty0ShxdkhHIgkxytnVEH0jJhBjzq5jxARCxdkBoxbF2d0TwDwiEat4iaL1pSSK
+        iGX2eImitUwTRZzvxkucHdIRkrMDO0Jzdgqib8QE4rJwdio+6EcUEwgFZ0fc1yI5+0+AO40UZ4fc+xVF
+        48j8W0Hi7JCO0Jwd0JExZx/ciAmEkrOr44N+RDGBoDk7ZOeDVDQilygis0ucHbJoJDk7oiM9OTsF0Tdi
+        AjHm7EwGNGIC0YezU/FBP6KYQCg4O2IeoTg7cmbH38SWikbk6lf6jSDzEQVnV0P0jZhAjD5nV8cH/Yhi
+        AqHg7MAddHJvPOJOo7RlilyiUL3xkEUjydkRHenJ2SmIvhETiDFnZzKgEROIPpydig/6EcUEQsHZgTvo
+        5N54xF4UirMjF40SZ4d0JJIQR6KDbszZmfQ2YgKh4uyAUYvi7MgddHSJovWlJIpQ9MYj1lqX4zw7BdE3
+        YgIRa3NCJlaXg7NT8UE/ophAKDg74r4WydmBO+jim9hDzG6iiNE/z66G6BsxgVCcZ0d0ZMzZBzdiAqHk
+        7Or4oB9RTCBozg7Z+SAVjcglCtkbj1g0kpwd0ZGenJ2C6BsxgRhzdiYDGjGB6MPZqfigH1FMIBScHTGP
+        UJwdObPjb2KP+Hl2QEcUnF0N0TdiAjH6nF0dH/QjigmEgrMDd9DJvfGIO43SlilyiUL1xkMWjSRnR3Sk
+        J2enIPpGTCDGnJ3JgEZMIPpwdio+6EcUEwgFZwfuoIudZwfsRaE4O3LRKHF2SEcU59nVEH0jJhBjzq5j
+        xARCxdkBoxbF2ZE76OgSRetLSRSh6I1HrLUux3l2CqJvxAQi1uaETKwuB2en4oN+RDGBUHB2xH0tkrMD
+        d9DFN7GHmN1EEaN/nl0N0TdiAqE4z47oyJizD27EBELJ2dXxQT+imEDQnB2y80EqGpFLFLI3HrFoJDk7
+        oiM9OTsF0TdiAjHm7EwGNGIC0YezU/FBP6KYQCg4O2IeoTg7cmbH38Qe8fPsgI4oOLsaom/EBGL0Obs6
+        PuhHFBMIBWcH7qCTe+MRdxqlLVPkEoXqjYcsGknOjuhIT85OQfSNmECMOTuTAY2YQPTh7FR80I8oJhAK
+        zg7cQRc7zw7Yi0JxduSiUeLskI4ozrOrIfpGTCAUnH2jHsqbdt3WZGq9frzN9O1joTfbddsbMZAc4mdf
+        SojtpfWo0TpoNQ6O/CP/9NR/32i1Wo1Gq/HB90/9U9//JXy3ddBqnTD11Odqo9Hg6umJcYT/628EZ/fu
+        uYEbeN5HN/AOg48V79B1PS+47x564fhhJXDdSuAGv/PHAtcNKq4beG4I8AIvcHsjDuMItx+inw0vqHjd
+        CfFO+WWZSeflZXj7B9P5YOeWvRUdiAzz9+gHoh/B9fBlSBvh3+14iXKr1FM+feqtl0p/9tG7BuJ612fG
+        9S4IVzuZPZyR5RVYWY5y9qUisCx1OPvCfCEPK4X5hb/+Zo44ucUctCzOiForm3Vs2w4vjo13sZ2sMxmW
+        KP9YGessk/lsnX3OnGXwLpkzy8pcT6f+nUhfm8CWdPpK+r//AYDpcg0E1EpBAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="fileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
